Adding get all user func
